fixe login login styling and wrap on map page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,8 +43,7 @@
  padding-top: 25px;
 }
 
-.border {
-  flex-wrap: wrap;
+.userGroupColumn {
   width: 115%;
   height: 200px;
   background-color: black;
